[package]
name = "calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
pelican = {version="2.0.4", package="pelican_ui"} #"0.2.8"
roost = {version="2.0.4", package="roost_ui"} #"0.2.8"
include_dir = "0.7.4"
serde = "1.0.228"
chrono = "0.4.42"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
