[package]
name = "calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
pelican_ui = "2.0.6"
prism = { package = "prism2", version = "0.1.2" }
maverick_os = "0.2.5"
wgpu_canvas = { version = "5.0.5", features = ["canvas", "renderer"] }
include_dir = "0.7.4"
serde = "1.0.228"
chrono = "0.4.42"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
