[package]
name = "calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
pelican_ui = "2.1.1"
prism = { package = "prism2", version = "0.1.3" }
maverick_os = "0.3.3"
wgpu_canvas = { version = "5.0.6", features = ["canvas", "renderer"] }
include_dir = "0.7.4"
serde = "1.0.228"
chrono = "0.4.44"

[lib]
name="main"
crate-type=["staticlib", "cdylib", "rlib"]
